# docs/swagger.json
@@ -361,12 +361,12 @@
                 "summary": "Trigger a job immediately",
                 "parameters": [
                     {
-                        "description": "Job ID",
+                        "description": "Job ID and expected version",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/httptransport.JobIDRequest"
+                            "$ref": "#/definitions/httptransport.TriggerJobRequest"
                         }
                     }
                 ],
@@ -877,6 +877,21 @@
                     "type": "string"
                 },
                 "request_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "httptransport.TriggerJobRequest": {
+            "type": "object",
+            "required": [
+                "expected_version",
+                "id"
+            ],
+            "properties": {
+                "expected_version": {
+                    "type": "integer"
+                },
+                "id": {
                     "type": "string"
                 }
             }
